--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -8,8 +8,8 @@ name: 自动更新博客
        steps:
          - uses: actions/checkout@v2
          - name: 生成新文章
-           run: |
-             python generate_post.py  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
+           run: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
+             python generate_post.py  
          - uses: github-actions-x/commit@v2
            with:
              files: _posts/*
